Fixing layout issue from previous commit.

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -218,8 +218,12 @@
 
     // Main Section. //
     
-    #main, .full-section, #bottom {
+    #main, #bottom {
         @include span(12 of 15 last);
+    }
+
+    .full-section {
+        @include span(12 of 12);
     }
 
     // Skills Section. //
